Started the CandleStick Chart Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mpchart01" >
+    package="com.example.mpchart01">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,10 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MPChart01" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/Theme.MPChart01">
+        <activity android:name=".BitCoinCandleStickActivity"
+            android:exported="true"
+            android:label="BTC Candlestick Chart"
+            android:parentActivityName=".MainActivity"
+            />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
