--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name="com.example.btcbrunch.BitCoinVsStocksActivity"
             android:exported="true"
-            android:label="BTC Brunch Stocks/Bitcoin Line"
+            android:label="BTC Brunch Commodity/Bitcoin Line"
             android:parentActivityName="com.example.btcbrunch.MainActivity" />
 
 
