--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.btcbrunch">
+    package="com.btcbrunch">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,20 +10,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MPChart01">
         <activity
-            android:name="com.example.btcbrunch.BitCoinVsStocksActivity"
+            android:name="com.btcbrunch.BitCoinVsStocksActivity"
             android:exported="true"
             android:label="BTC Brunch Commodity/Bitcoin Line"
-            android:parentActivityName="com.example.btcbrunch.MainActivity" />
+            android:parentActivityName="com.btcbrunch.MainActivity" />
 
 
-        <activity
-            android:name="com.example.btcbrunch.BitCoinCandleStickActivity"
-            android:exported="true"
-            android:label="BTC Brunch Candlestick Chart"
-            android:parentActivityName="com.example.btcbrunch.MainActivity" />
-        <activity android:name="com.example.btcbrunch.MainActivity">
+<!--        <activity-->
+<!--            android:name="com.btcbrunch.BitCoinCandleStickActivity"-->
+<!--            android:exported="true"-->
+<!--            android:label="BTC Brunch Candlestick Chart"-->
+<!--            android:parentActivityName="com.btcbrunch.MainActivity" />-->
+        <activity android:name="com.btcbrunch.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
